// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrincipalDetailsPanel/> for group 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    Group Details
  </div>
  <div
    className="panel-body"
  >
    <p
      className="permissions-title-primary"
    >
      Editor User Group
    </p>
    <br />
    <p>
      Effective Roles:
    </p>
    <ul
      className="permissions-ul"
    >
      <li>
        Editor
      </li>
    </ul>
  </div>
</div>
`;

exports[`<PrincipalDetailsPanel/> for user 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    User Details
  </div>
  <div
    className="panel-body"
  >
    <p
      className="permissions-title-primary"
    >
      cnathe@labkey.com (Cory Nathe)
    </p>
    <br />
    <p>
      Effective Roles:
    </p>
    <ul
      className="permissions-ul"
    >
      <li>
        Editor
      </li>
      <li>
        Folder Administrator
      </li>
      <li>
        Project Administrator
      </li>
      <li>
        Reader
      </li>
      <li>
        Restricted Reader
      </li>
      <li>
        Submitter
      </li>
    </ul>
  </div>
</div>
`;

exports[`<PrincipalDetailsPanel/> no principal 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    User Details
  </div>
  <div
    className="panel-body"
  >
    <div>
      No user selected.
    </div>
  </div>
</div>
`;
